# EmbDmn

./: CMakeLists.txt  README
src/: main.cpp  main.h
src/channel/: channel.h  udpchannel.cpp  udpchannel.h
src/dispatcher/: dispatcher.cpp  dispatcher.h
src/protocol/: fbprotocol.cpp  fbprotocol.h  fbschema.fbs  fbschema_generated.h  protocol.h
